--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,31 +14,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-14 Fri 17:17]
+#+CAPTION: Clock summary at [2016-10-14 Fri 21:36]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *39:54* |       |       | 100.0 |
+| *Total time*                                                                | *40:53* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 39:54   |       |       | 100.0 |
-| Active                                                                      |         | 39:54 |       | 100.0 |
+| Stories                                                                     | 40:53   |       |       | 100.0 |
+| Active                                                                      |         | 40:53 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.8 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.1 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   3.2 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   3.1 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  10.1 |
-| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.8 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   3.0 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  38.1 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   9.8 |
+| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.7 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.9 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  37.2 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.2 |
-| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   4.3 |
+| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   4.2 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.4 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  29.7 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  28.9 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.8 |
-| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   4.6 |
-| STARTED Implement defaulting within the profiler                            |         |       |  0:14 |   0.6 |
-| STARTED Finish overwriting support                                          |         |       |  0:06 |   0.3 |
+| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   4.5 |
+| COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   3.0 |
+| STARTED Finish overwriting support                                          |         |       |  0:06 |   0.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -463,13 +463,11 @@ We just need to enable/disable serialisation and the code will work.
 
 - add a stereotype of handcrafted with a default profile.
 
-*** Add binding of stereotypes with profiles                          :story:
-
-During annotation expansion, we need to supply a list of the remaining
-stereotypes against ids. If there is a match, they are used as
-profiles.
-
-*** STARTED Implement defaulting within the profiler                  :story:
+*** COMPLETED Implement defaulting within the profiler                :story:
+    CLOSED: [2016-10-14 Fri 21:36]
+    CLOCK: [2016-10-14 Fri 21:29]--[2016-10-14 Fri 21:36] =>  0:07
+    CLOCK: [2016-10-14 Fri 20:59]--[2016-10-14 Fri 21:28] =>  0:29
+    CLOCK: [2016-10-14 Fri 17:16]--[2016-10-14 Fri 17:39] =>  0:23
     CLOCK: [2016-10-14 Fri 13:56]--[2016-10-14 Fri 14:10] =>  0:14
 
 We tried to do defaulting via the type's default value, but this is
@@ -494,6 +492,12 @@ but there is some linkage missing:
 - global/local configuration needs to have an overwrite flag;
 - need to populate formatter configuration on the back of that;
 - need to read flag from formatter configuration and set it on file.
+
+*** Add binding of stereotypes with profiles                          :story:
+
+During annotation expansion, we need to supply a list of the remaining
+stereotypes against ids. If there is a match, they are used as
+profiles.
 
 *** Generate formatter interfaces                                      :epic:
 
