--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,36 +14,38 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-14 Fri 23:52]
+#+CAPTION: Clock summary at [2016-10-15 Sat 00:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *43:06* |       |       | 100.0 |
+| *Total time*                                                                | *43:27* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 43:06   |       |       | 100.0 |
-| Active                                                                      |         | 43:06 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   0.9 |
+| Stories                                                                     | 43:27   |       |       | 100.0 |
+| Active                                                                      |         | 43:27 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.7 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.0 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   3.0 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   9.3 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   9.2 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.7 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.7 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  35.3 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  35.0 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.1 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   4.0 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.4 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  27.5 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  27.2 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.8 |
 | COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   4.3 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.8 |
-| COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   3.9 |
+| COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   3.8 |
+| COMPLETED Update dogen models to use profiles                               |         |       |  0:19 |   0.7 |
 | STARTED Finish overwriting support                                          |         |       |  0:39 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2016-10-15 Sat 00:13]--[2016-10-15 Sat 00:15] =>  0:02
     CLOCK: [2016-10-10 Mon 08:40]--[2016-10-10 Mon 09:02] =>  0:22
 
 Updates to sprint and product backlog.
@@ -499,7 +501,14 @@ Problems:
 - we need to somehow make the candidate labels available after
   annotations were generated.
 
+*** COMPLETED Update dogen models to use profiles                     :story:
+    CLOSED: [2016-10-15 Sat 00:13]
+    CLOCK: [2016-10-14 Fri 23:53]--[2016-10-15 Sat 00:12] =>  0:19
+
+We've updated test models but did not update dogen models.
+
 *** STARTED Finish overwriting support                                :story:
+
     CLOCK: [2016-10-14 Fri 23:19]--[2016-10-14 Fri 23:52] =>  0:33
     CLOCK: [2016-10-14 Fri 13:49]--[2016-10-14 Fri 13:55] =>  0:06
 
@@ -526,6 +535,17 @@ Merged stories:
 *Services and leaves are not properly handled*
 
 We are manually ignoring services when calculating leaves.
+
+*** Multiple inheritance and profiles do not work                     :story:
+
+The current inheritance logic is fine for single inheritance or even
+multiple inheritance when two parts of the inheritance tree do not
+define the same types; but it fails when there is overlap. For an
+example, see the previous attempt to define "disable odb cmake" in terms
+of "disable odb" and "disable cmake". This fails because disable odb
+inherits from enable all facets; when we merge against "disable cmake"
+we do not know that cmake was enabled via "enable all facets" and so
+this takes priority.
 
 *** Generate skeleton for "non-generatable" files                     :story:
 
