--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,34 +14,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-15 Sat 18:46]
+#+CAPTION: Clock summary at [2016-10-15 Sat 19:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *46:36* |       |       | 100.0 |
+| *Total time*                                                                | *47:05* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 46:36   |       |       | 100.0 |
-| Active                                                                      |         | 46:36 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   0.9 |
+| Stories                                                                     | 47:05   |       |       | 100.0 |
+| Active                                                                      |         | 47:05 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   0.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.7 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.9 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.8 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.7 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   8.6 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   8.5 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.6 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.5 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  32.6 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  32.3 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.0 |
-| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.7 |
+| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.6 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.4 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  25.4 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  25.1 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.7 |
-| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   4.0 |
+| COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.9 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.6 |
-| COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   3.6 |
+| COMPLETED Add binding of stereotypes with profiles                          |         |       |  1:40 |   3.5 |
 | COMPLETED Update dogen models to use profiles                               |         |       |  0:19 |   0.7 |
-| COMPLETED Finish overwriting support                                        |         |       |  2:38 |   5.7 |
-| STARTED Remove service stereotype                                           |         |       |  1:10 |   2.5 |
+| COMPLETED Finish overwriting support                                        |         |       |  2:38 |   5.6 |
+| STARTED Remove service stereotype                                           |         |       |  1:39 |   3.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -528,6 +528,7 @@ Tasks:
 - use overwrite flag in formatter workflow
 
 *** STARTED Remove service stereotype                                 :story:
+    CLOCK: [2016-10-15 Sat 18:46]--[2016-10-15 Sat 19:15] =>  0:29
     CLOCK: [2016-10-15 Sat 18:42]--[2016-10-15 Sat 18:46] =>  0:04
     CLOCK: [2016-10-15 Sat 18:18]--[2016-10-15 Sat 18:41] =>  0:23
     CLOCK: [2016-10-15 Sat 17:34]--[2016-10-15 Sat 18:17] =>  0:43
