--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-15 Sat 21:24]
+#+CAPTION: Clock summary at [2016-10-15 Sat 21:33]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *48:58* |       |       | 100.0 |
+| *Total time*                                                                | *49:04* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 48:58   |       |       | 100.0 |
-| Active                                                                      |         | 48:58 |       | 100.0 |
+| Stories                                                                     | 49:04   |       |       | 100.0 |
+| Active                                                                      |         | 49:04 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   0.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.6 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.9 |
@@ -34,7 +34,7 @@
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.0 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.5 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  24.2 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  24.1 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.7 |
 | COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   3.8 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   2.5 |
@@ -42,6 +42,7 @@
 | COMPLETED Update dogen models to use profiles                               |         |       |  0:19 |   0.6 |
 | COMPLETED Finish overwriting support                                        |         |       |  2:38 |   5.4 |
 | COMPLETED Remove service stereotype                                         |         |       |  3:32 |   7.2 |
+| COMPLETED IOable services                                                   |         |       |  0:06 |   0.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -553,6 +554,27 @@ Merged stories:
 
 We are manually ignoring services when calculating leaves.
 
+*** COMPLETED IOable services                                         :story:
+    CLOSED: [2016-10-15 Sat 21:32]
+    CLOCK: [2016-10-15 Sat 21:26]--[2016-10-15 Sat 21:32] =>  0:06
+
+#+begin_quote
+*Story*: As a dogen user, I want to output all the state of my
+services without having to manually create code for it.
+#+end_quote
+
+Even though we do not code generate services, it would be nice if we
+could still setup their IO infrastructure - something basic just
+outputting the type and taking inheritance into account. We end up
+doing a lot of this manually anyway.
+
+Also, if a service has a bunch of attributes that are IOable, we
+should set them up too.
+
+We now have all the infrastructure of this to work. Do a simple proof
+of concept by looking at handcrafted types that implement io via
+regexes, remove the regexes and update the meta-data.
+
 *** Add description to profile and value templates                    :story:
 
 It would be nice to put some kind of comments as to what the profile
@@ -596,21 +618,6 @@ bottom. Ideally we should also generate stubs for all methods - adding
 a blank implementation with return types where required and commented
 out parameters, to make the code compilable out of the box. This will
 be possible once we start supporting operations.
-
-*** IOable services                                                   :story:
-
-#+begin_quote
-*Story*: As a dogen user, I want to output all the state of my
-services without having to manually create code for it.
-#+end_quote
-
-Even though we do not code generate services, it would be nice if we
-could still setup their IO infrastructure - something basic just
-outputting the type and taking inheritance into account. We end up
-doing a lot of this manually anyway.
-
-Also, if a service has a bunch of attributes that are IOable, we
-should set them up too.
 
 *** Generate formatter interfaces                                      :epic:
 
