--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,15 +14,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-15 Sat 22:25]
+#+CAPTION: Clock summary at [2016-10-15 Sat 22:32]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *49:55* |       |       | 100.0 |
+| *Total time*                                                                | *50:00* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 49:55   |       |       | 100.0 |
-| Active                                                                      |         | 49:55 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   0.8 |
+| Stories                                                                     | 50:00   |       |       | 100.0 |
+| Active                                                                      |         | 50:00 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:29 |   1.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.6 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.9 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.6 |
@@ -30,7 +30,7 @@
 | COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   8.0 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.6 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   2.4 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  30.5 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  30.4 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.0 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   3.4 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
@@ -48,6 +48,7 @@
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2016-10-15 Sat 22:26]--[2016-10-15 Sat 22:31] =>  0:05
     CLOCK: [2016-10-15 Sat 00:13]--[2016-10-15 Sat 00:15] =>  0:02
     CLOCK: [2016-10-10 Mon 08:40]--[2016-10-10 Mon 09:02] =>  0:22
 
@@ -606,11 +607,6 @@ It would be nice to put some kind of comments as to what the profile
 is doing and where required, the rationale behind some defaulting on
 the value templates. We probably should look into supporting
 descriptions in data as a whole.
-
-*** Remove force write feature                                        :story:
-
-We never force write and now the logic is a bit at odds with the
-overwriting logic.
 
 *** Multiple inheritance and profiles do not work                     :story:
 
